[package]
name = "lorahatlib"
version = "0.1.0"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libgpiod = {git = "https://github.com/s2e-systems/libgpiod-rs.git"}
libspidev = {path = "../libspidev-rs/"}
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"